// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Creates a hex representation of a color in #AARRGGBB 1`] = `
.c0 {
  argb: #805a1794;
  argb: #805a1794;
}

<div
  className="c0"
  r={90}
/>
`;

exports[`Creates an opaque color object from decimal red, green and blue (RGB) values. 1`] = `
.c0 {
  rgb: #5a8120ff;
  rgba: #5a812080;
  rgb: #5a8120ff;
  rgba: #5a812080;
  rgb: #5a8120ff;
  rgba: #5a812080;
  rgb: #5a8120ff;
  rgba: #5a812080;
  rgb: #ffffffff;
}

<div
  className="c0"
  r={90}
/>
`;

exports[`Creates an opaque color object from hue, saturation and lightness (HSL) values. 1`] = `
.c0 {
  hsl: #80ff00ff;
  hsl1: #80ff00ff;
  new: #e6f1daff;
  hsla: #80ff0080;
}

<div
  className="c0"
/>
`;
